--- a/app/login.html
+++ b/app/login.html
@@ -7,32 +7,30 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="wrap">
-		<div class="container flex-container">
-			<div class="login-form">
-				<form>
-					<div class="mail-row flex-container">
-						<div class="log-icon">
-							<span class="icon icon-account_circle-grey"></span>
-						</div>
-						<input type="email" placeholder="E-mail" name = "email">	
+	<div class="wrap log-flex">		
+		<div class="login-form">
+			<form>
+				<div class="mail-row log-flex">
+					<div class="log-icon">
+						<span class="icon icon-account_circle-grey"></span>
 					</div>
-					<div class="pass-row flex-container">
-						<div class="log-icon">
-							<span class="icon icon-lock-grey"></span>
-						</div>
-						<input type="password" placeholder="Пароль" name="pas">	
+					<input type="email" placeholder="E-mail" name = "email">	
+				</div>
+				<div class="pass-row log-flex">
+					<div class="log-icon">
+						<span class="icon icon-lock-grey"></span>
 					</div>
-					<div class="button-row flex-container">
-						<button> ВОЙТИ</button>							
-					</div>
-					<div class="check-row flex-container">
-						<input type="checkbox" id="check-pas">
-						<label for="check-pas">Сохранить пароль</label>			
-					</div>
-				</form>
-			</div>
-		</div>
+					<input type="password" placeholder="Пароль" name="pas">	
+				</div>
+				<div class="button-row log-flex">
+					<button> ВОЙТИ</button>							
+				</div>
+				<div class="check-row log-flex">
+					<input type="checkbox" id="check-pas">
+					<label for="check-pas">Сохранить пароль</label>			
+				</div>
+			</form>
+		</div>		
 	</div>
 </body>
 </html>
