доделать перестройку сообщений на главной странице

--- a/app/index.html
+++ b/app/index.html
@@ -67,9 +67,9 @@
 								</div>
 							</div>
 							<div class="task-check-row flex-container">
-								<div class="task-icon">
+								<!-- <div class="task-icon">
 									<span class="icon icon-check"></span>
-								</div>
+								</div> -->
 								<input type="checkbox" id="check">
 								<label for="check">Задача еще не выполнена</label>
 							</div>
@@ -82,7 +82,7 @@
 					</div>
 					<!-- one task end -->
 					<!-- one task start -->
-					<div class="task success">
+					<div class="task success open">
 						<div class="to-do-time">9:00</div>
 						<div class="task-header flex-container">
 							<span class ="icon icon-arrow"></span>
@@ -114,6 +114,12 @@
 								
 							</div>	
 						</div>	
+						<div class="message flex-container">
+							<div class="success-icon">
+								<span class="icon icon-star"></span>
+							</div>
+							<div class="success-text">Поздравляем! Вы справились с задачей</div>
+						</div>
 					</div>
 					<!-- one task end -->
 					<!-- one task start -->
@@ -149,6 +155,12 @@
 								
 							</div>	
 						</div>	
+						<div class="message flex-container">
+							<div class="warning-icon">
+								<span class="icon icon-warning"></span>
+							</div>
+							<div class="warn-text">Вы не выполнили эту задачу</div>
+						</div>							
 					</div>
 					<!-- one task end -->
 				</div>
