доделала: текст со звездочкой перестраивается справа на десктопе

--- a/app/index.html
+++ b/app/index.html
@@ -41,127 +41,145 @@
 				</div>
 				<div class="all-task-wrap">
 					<!-- one task start -->
-					<div class="task open">
-						<div class="to-do-time">9:00</div>
-						<div class="task-header flex-container">
-							<span class ="icon icon-arrow"></span>
-							<div class="short-task-text">some text some text</div>
-							<span class = "icon icon-cancel"></span>
-						</div>
-						<div class="task-content-wrap">
-							<div class="time-row flex-container">
-								<div class="task-icon">
-									<span class="icon icon-time"></span>
-								</div>
-								<span class="time">9:00</span>
-								<div class="task-icon">
-									<span class="icon icon-bell"></span>
-								</div>
+					<div class="one-task-wrap flex-container">
+						<div class="task open">
+							<div class="to-do-time">9:00</div>
+							<div class="task-header flex-container">
+								<span class ="icon icon-arrow"></span>
+								<div class="short-task-text">some text some text</div>
+								<span class = "icon icon-cancel"></span>
 							</div>
-							<div class="task-text-row flex-container">
-								<div class="task-icon">
-									<span class="icon icon-list"></span>
+							<div class="task-content-wrap">
+								<div class="time-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-time"></span>
+									</div>
+									<span class="time">9:00</span>
+									<div class="task-icon">
+										<span class="icon icon-bell"></span>
+									</div>
 								</div>
-								<div class="text">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui repudiandae reiciendis error harum non dolorem laborum maiores ad laboriosam ullam, ipsam voluptatibus accusantium eius vel, accusamus omnis doloribus velit ducimus.
+								<div class="task-text-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-list"></span>
+									</div>
+									<div class="text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui repudiandae reiciendis error harum non dolorem laborum maiores ad laboriosam ullam, ipsam voluptatibus accusantium eius vel, accusamus omnis doloribus velit ducimus.
+									</div>
 								</div>
-							</div>
-							<div class="task-check-row flex-container">
-								<!-- <div class="task-icon">
-									<span class="icon icon-check"></span>
-								</div> -->
-								<input type="checkbox" id="check">
-								<label for="check">Задача еще не выполнена</label>
-							</div>
-							<div class="task-edit-row flex-container">
-								<div class="task-icon">
-									<span class="icon icon-edit-not_active"></span>
+								<div class="task-check-row flex-container">
+									<!-- <div class="task-icon">
+										<span class="icon icon-check"></span>
+									</div> -->
+									<input type="checkbox" id="check">
+									<label for="check">Задача еще не выполнена</label>
 								</div>
+								<div class="task-edit-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-edit-not_active"></span>
+									</div>
+								</div>	
 							</div>	
-						</div>	
-					</div>
+						</div>
+					</div>						
 					<!-- one task end -->
 					<!-- one task start -->
-					<div class="task success open">
-						<div class="to-do-time">9:00</div>
-						<div class="task-header flex-container">
-							<span class ="icon icon-arrow"></span>
-							<div class="short-task-text">some text some text</div>
-							<span class = "icon icon-cancel"></span>
+					<div class="one-task-wrap flex-container">
+						<div class="task success open">
+							<div class="to-do-time">9:00</div>
+							<div class="task-header flex-container">
+								<span class ="icon icon-arrow"></span>
+								<div class="short-task-text">some text some text</div>
+								<span class = "icon icon-cancel"></span>
+							</div>
+							<div class="task-content-wrap">
+								<div class="time-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-time"></span>
+									</div>
+									<span class="time">9:00</span>
+									<div class="task-icon">
+										<span class="icon icon-bell"></span>
+									</div>
+								</div>
+								<div class="task-text-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-list"></span>
+									</div>
+									<div class="text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui repudiandae reiciendis error harum non dolorem laborum maiores ad laboriosam ullam, ipsam voluptatibus accusantium eius vel, accusamus omnis doloribus velit ducimus.
+									</div>
+								</div>
+								<div class="task-check-row flex-container">
+									<!-- <div class="task-icon">
+										<span class="icon icon-check"></span>
+									</div> -->
+									<input type="checkbox" id="check">
+									<label for="check">Задача еще не выполнена</label>
+								</div>
+								<div class="task-edit-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-edit-not_active"></span>
+									</div>
+								</div>	
+							</div>							
 						</div>
-						<div class="task-content-wrap">
-							<div class="time-row flex-container">
-								<div class="task-icon">
-									<span class="icon icon-time"></span>
-								</div>
-								<span class="time">9:00</span>
-								<div class="task-icon">
-									<span class="icon icon-bell"></span>
-								</div>
-							</div>
-							<div class="task-text-row flex-container">
-								<div class="task-icon">
-									<span class="icon icon-list"></span>
-								</div>
-								<div class="text">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui repudiandae reiciendis error harum non dolorem laborum maiores ad laboriosam ullam, ipsam voluptatibus accusantium eius vel, accusamus omnis doloribus velit ducimus.
-								</div>
-							</div>
-							<div class="task-check-row">
-								<div class="task-icon"></div>
-							</div>
-							<div class="task-edit-row">
-								
-							</div>	
-						</div>	
 						<div class="message flex-container">
 							<div class="success-icon">
 								<span class="icon icon-star"></span>
 							</div>
 							<div class="success-text">Поздравляем! Вы справились с задачей</div>
 						</div>
-					</div>
+					</div>					
 					<!-- one task end -->
 					<!-- one task start -->
-					<div class="task warning">
-						<div class="to-do-time">9:00</div>
-						<div class="task-header flex-container">
-							<span class ="icon icon-arrow"></span>
-							<div class="short-task-text">some text some text</div>
-							<span class = "icon icon-cancel"></span>
+					<div class="one-task-wrap flex-container">
+						<div class="task warning">
+							<div class="to-do-time">9:00</div>
+							<div class="task-header flex-container">
+								<span class ="icon icon-arrow"></span>
+								<div class="short-task-text">some text some text</div>
+								<span class = "icon icon-cancel"></span>
+							</div>
+							<div class="task-content-wrap">
+								<div class="time-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-time"></span>
+									</div>
+									<span class="time">9:00</span>
+									<div class="task-icon">
+										<span class="icon icon-bell"></span>
+									</div>
+								</div>
+								<div class="task-text-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-list"></span>
+									</div>
+									<div class="text">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui repudiandae reiciendis error harum non dolorem laborum maiores ad laboriosam ullam, ipsam voluptatibus accusantium eius vel, accusamus omnis doloribus velit ducimus.
+									</div>
+								</div>
+								<div class="task-check-row flex-container">
+									<!-- <div class="task-icon">
+										<span class="icon icon-check"></span>
+									</div> -->
+									<input type="checkbox" id="check">
+									<label for="check">Задача еще не выполнена</label>
+								</div>
+								<div class="task-edit-row flex-container">
+									<div class="task-icon">
+										<span class="icon icon-edit-not_active"></span>
+									</div>
+								</div>	
+							</div>														
 						</div>
-						<div class="task-content-wrap">
-							<div class="time-row flex-container">
-								<div class="task-icon">
-									<span class="icon icon-time"></span>
-								</div>
-								<span class="time">9:00</span>
-								<div class="task-icon">
-									<span class="icon icon-bell"></span>
-								</div>
-							</div>
-							<div class="task-text-row flex-container">
-								<div class="task-icon">
-									<span class="icon icon-list"></span>
-								</div>
-								<div class="text">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui repudiandae reiciendis error harum non dolorem laborum maiores ad laboriosam ullam, ipsam voluptatibus accusantium eius vel, accusamus omnis doloribus velit ducimus.
-								</div>
-							</div>
-							<div class="task-check-row">
-								<div class="task-icon"></div>
-							</div>
-							<div class="task-edit-row">
-								
-							</div>	
-						</div>	
 						<div class="message flex-container">
 							<div class="warning-icon">
 								<span class="icon icon-warning"></span>
 							</div>
 							<div class="warn-text">Вы не выполнили эту задачу</div>
-						</div>							
-					</div>
+						</div>
+					</div>					
 					<!-- one task end -->
 				</div>
 			</div>
