--- a/app/login.html
+++ b/app/login.html
@@ -10,13 +10,13 @@
 	<div class="wrap log-flex">		
 		<div class="login-form">
 			<form>
-				<div class="mail-row log-flex">
+				<div class="log-flex">
 					<div class="log-icon">
 						<span class="icon icon-account_circle-grey"></span>
 					</div>
 					<input type="email" placeholder="E-mail" name = "email">	
 				</div>
-				<div class="pass-row log-flex">
+				<div class="log-flex">
 					<div class="log-icon">
 						<span class="icon icon-lock-grey"></span>
 					</div>
