исправлена страница логина

--- a/app/login.html
+++ b/app/login.html
@@ -23,7 +23,7 @@
 					<input type="password" placeholder="Пароль" name="pas">	
 				</div>
 				<div class="button-row log-flex">
-					<button> ВОЙТИ</button>							
+					<button class="blue-btn"> ВОЙТИ</button>							
 				</div>
 				<div class="check-row log-flex">
 					<input type="checkbox" id="check-pas">
