--- a/app/task-edit.html
+++ b/app/task-edit.html
@@ -182,7 +182,7 @@
 					</div>
 				</div>
 				<div class="input-group">
-					<button type="submit" class="add-task-btn">Добавить</button>
+					<button type="submit" class="blue-btn">Добавить</button>
 				</div>
 			</div>
 		</div>	
